<resources>
    <string name="app_name">Tasks</string>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_LOAD_TASK">Erro ao carregar a tarefa.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>

    <string name="task_updated">Tarefa atualizada com sucesso!</string>
    <string name="task_created">Tarefa criada com sucesso!</string>
    <string name="task_removed">Tarefa removida com sucesso!</string>

    <string name="email_password_required">E-mail e/ou senha obrigatórios!</string>
    <string name="name_required">Nome obrigatório!</string>

    <string name="all_tasks">Todas as tarefas</string>
    <string name="next_seven_days">Próximos 7 dias</string>
    <string name="expired">Expiradas</string>

    <string name="action_settings">Configurações</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="name">Nome</string>
    <string name="signup">Cadastrar</string>
    <string name="description">Descrição</string>
    <string name="priority">Prioridade</string>
    <string name="limit_date">Data Limite</string>
    <string name="update_task">Atualizar tarefa</string>
    <string name="limit_date_selector">Clique para selecionar a data limite</string>
    <string name="done">Completa</string>
    <string name="add_task">Adicionar tarefa</string>
    <string name="yes">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="task_removal">Remoção de tarefa</string>
    <string name="remove_task">Remover tarefa?</string>
    <string name="do_not_have_an_account">Não tem uma conta?</string>
    <string name="sign">Cadastre-se</string>
    <string name="enter">Entrar</string>
    <string name="exit">Sair</string>
    <string name="tasks">Tarefas</string>
    <string name="image_complete">Imagem de tarefa</string>
    <string name="app_image">Imagem do drawer</string>
    <string name="insert_biometric">Insira biometria para entrar</string>
    <string name="already_have_an_account">Já tem uma conta?</string>
</resources>