<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_tasks"
            android:icon="@drawable/ic_all"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_overdue"
            android:icon="@drawable/ic_seven_days"
            android:title="@string/expired" />
        <item
            android:id="@+id/nav_next_tasks"
            android:icon="@drawable/ic_overdue"
            android:title="@string/next_seven_days" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/exit" />
    </group>

</menu>