<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.TaskActivity">

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorGrayText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_description" />

    <TextView
        android:id="@+id/text_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_priority" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorGrayText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_priority" />

    <CheckBox
        android:id="@+id/check_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_2" />

    <View
        android:id="@+id/divider_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorGrayText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_complete" />

    <Button
        android:id="@+id/button_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limit_date_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_3" />

    <View
        android:id="@+id/divider_4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorGrayText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_date" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_4" />

</androidx.constraintlayout.widget.ConstraintLayout>